gke-objects/vault/vault-gateway.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: vault-gateway
  namespace: vault
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "vault.sieczak.cloud"
      tls:
        mode: SIMPLE
        credentialName: vault-sieczak-cloud-tls
