gke-objects/vault/vault-virtual-service.yml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vault-vs
  namespace: vault
spec:
  hosts:
    - "vault.sieczak.cloud"
  gateways:
    - vault-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: vault.vault.svc.cluster.local
            port:
              number: 8200
